HW5SERVER/tests/output/t18.out
lli: tmp.ll:35:1: error: expected value token
ret i32  0
^
